        PR c++/37806         * typeck.c (cp_apply_type_quals_to_decl): Don't apply any quals         to a typedef.         * tree.c (cp_build_qualified_type_real): Don't apply restrict to a         function type.         * decl.h (enum decl_context): Add TEMPLATE_TYPE_ARG.         * decl.c (groktypename): Add is_template_arg parameter.         (grokdeclarator): Allow function cv-quals on a template type arg.         * parser.c (cp_parser_new_type_id, cp_parser_type_id): Add         is_template_arg argument in calls to groktypename.         * cp-tree.h: Adjust prototype.         * error.c (dump_type_prefix, dump_type_suffix): Fix plain         FUNCTION_TYPE printing.

PR libstdc++/39310
        * include/tr1_impl/type_traits (is_function): Add partial
        specializations with function cv-quals.
        (__is_function_helper): Remove.
        (is_member_pointer): Don't define in terms of is_member_*_pointer.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@145365 138bc75d-0d04-0410-961f-82ee72b054a4